Stop viewport overflow

--- a/main-style.scss
+++ b/main-style.scss
@@ -6,7 +6,8 @@
 }
 
 html, body {
-  min-height: 100%;
+  height: 100vh;
+  width: 100vw;
   overflow: hidden;
 }
 * {
